tests/ui/variable_bits/invalid_attribute_format.stderr
error: bits must be integer literal for fixed size: #[bits = N]
 --> tests/ui/variable_bits/invalid_attribute_format.rs:4:3
  |
4 | #[bits = hello]  // Invalid: should be an integer
  |   ^^^^^^^^^^^^

error: attribute value must be a literal
 --> tests/ui/variable_bits/invalid_attribute_format.rs:4:10
  |
4 | #[bits = hello]  // Invalid: should be an integer
  |          ^^^^^
